# epispec

./: CMakeLists.txt  README.md  analysis.cpp  architecture.cpp  individual.cpp  individual.h  main.cpp
